[gd_scene load_steps=3 format=3 uid="uid://bbeotg33mjo3v"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_w30ro"]
[ext_resource type="Texture2D" uid="uid://d1nrgce3yb7d6" path="res://icons/arrow-clockwise.svg" id="2_c4s7n"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_w30ro")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.724643, 0.724643, 0.724643, 1)
metadata/_edit_lock_ = true

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.0
offset_top = -95.0
offset_right = 146.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.524044, 0.506632, 1)
theme_override_font_sizes/font_size = 36
text = "Russian Roulette"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinButton" type="Button" parent="TitleContainer"]
layout_mode = 2
text = "Join"

[node name="HostButton" type="Button" parent="TitleContainer"]
layout_mode = 2
text = "Host"

[node name="OptionsButton" type="Button" parent="TitleContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="TitleContainer"]
layout_mode = 2
text = "Exit"

[node name="JoinContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -33.0
offset_right = 100.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoinAddress" type="LineEdit" parent="JoinContainer"]
layout_mode = 2
placeholder_text = "192.168.0.1:5000"
alignment = 1

[node name="JoinAddressButton" type="Button" parent="JoinContainer"]
layout_mode = 2
text = "Join game"

[node name="HostContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -33.0
offset_right = 100.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostAddress" type="LineEdit" parent="HostContainer"]
layout_mode = 2
placeholder_text = "192.168.0.1:5000"
alignment = 1

[node name="HostAddressButton" type="Button" parent="HostContainer"]
layout_mode = 2
text = "Host game"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
title = "Ошибка"
initial_position = 1
size = Vector2i(300, 200)

[node name="LoadingIcon" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
texture = ExtResource("2_c4s7n")

[connection signal="pressed" from="TitleContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="TitleContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="TitleContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="TitleContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="JoinContainer/JoinAddressButton" to="." method="_on_join_address_button_pressed"]
[connection signal="pressed" from="HostContainer/HostAddressButton" to="." method="_on_host_address_button_pressed"]
